feat: search and api docs
